--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -84,7 +84,64 @@
     border-radius: 50%;
 }
 
-.copyrigth__text{
+.copyrigth__tex{
+    text-align:center;
+    __text{
     font-size: .8rem;
     color: #df2020;
+}
+
+@media only screen and (max-width:992px){
+    .newsletter input{
+        padding: 7px;
+        font-size: 0.7rem;
+    }
+
+    .newsletter span{
+        padding: 4px 20px;
+        font-size: 0.7rem;
+
+    }
+
+}
+
+@media only screen and (max-width:768px){
+    .footer__title{
+        font-size: .9rem;
+    }
+
+    .delivery__time-item span{
+        font-size: 0.8rem;
+    }
+
+    .delivery__time-item p{
+        font-size: .7rem;
+        margin-bottom: 0px;
+    }
+
+
+}
+
+@media only screen and (max-width:576px){
+    .copyrigth__text{
+        text-align:center;
+    }
+
+    .social_links{
+        justify-content: center !important;
+    }
+
+    .social_links p{
+        font-size: 0.8rem;
+    }
+
+    .social_links span{
+        padding: 4px;
+    }
+
+    .social_links span a{
+        font-size: 0.7rem;
+    }
+}
+
 }
