--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -78,3 +78,95 @@
     color: #777;
     line-height: 30px;
 }
+
+.hero__btns button{
+    border: none;
+    padding: 10px;
+}
+
+@media only screen and (max-width:768px){
+
+    .hero__content h5{
+        font-size: 1rem;
+    }
+
+    .hero__content p{
+        font-size: 0.8rem;
+        line-height: 25px;
+    }
+
+    .hero__title{
+        font-size: 1.5rem;
+        line-height: 40px;
+    }
+    .hero__btns button{
+        padding: 5px 15px;
+        font-size: 0.7rem;
+    }
+
+    .hero__service p{
+        font-size: 0.7rem;
+    }
+
+    .feature__item h5{
+        font-size: .9rem;
+    }
+
+    .feature__item p{
+        font-size: 0.8rem;
+        margin-bottom: 0;
+    }
+
+    .feature__subtitle{
+        font-size: 1rem;
+    }
+
+    .feature__text{
+        font-size: .8rem;
+    }
+
+    .food_category{
+        padding: 15px;
+    }
+
+    .food_category button{
+        padding: 0.5rem;
+        font-size: 0.4rem;
+    }
+
+    .tasty__treat-desc{
+        font-size: .8rem;
+        margin-bottom: 0;
+    }
+    .choose__us-title{
+        font-size: 0.8rem;
+    }
+
+    .choose__us-desc{
+        font-size: 0.7rem;
+    }
+
+    .testimonial__subtitle{
+        font-size: 1rem;
+    }
+
+    .testimonial__desc{
+        font-size: 0.8rem;
+    }
+
+}
+
+@media only screen and (max-width:576px){
+
+    .hero__content{
+        text-align: center;
+    }
+
+    .hero__btns{
+        justify-content: center;
+    }
+
+    .why__choose-us{
+        padding-top: 0 !important;
+    }
+}
