--- a/src/styles/product-card.scss
+++ b/src/styles/product-card.scss
@@ -39,3 +39,16 @@
     border-radius: 5px;
     font-size: 0.9rem;
 }
+
+@media only screen and (max-width:992px) {
+    .product__content h5 a{
+        font-size: 0.8rem;
+    }
+    .product__item{
+        padding: 20px;  
+    }
+    .addToCart__btn{
+        padding: 5px 15px;
+        font-size: 0.7rem;
+    }
+}
