--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -127,11 +127,13 @@
 
     .food_category{
         padding: 15px;
+        width: 100%;
     }
 
     .food_category button{
-        padding: 0.5rem;
-        font-size: 0.4rem;
+        padding: 0.3rem;
+        font-size: 0.8rem;
+        width: 100%;
     }
 
     .tasty__treat-desc{
