--- a/src/styles/product-details.scss
+++ b/src/styles/product-details.scss
@@ -35,6 +35,72 @@
     background: #fde4e4;
     color: #212245;
     border-radius: 5px;
+}
 
+.tabs{
+    border-bottom: 1px solid #fde4e4;
+}
 
+.tabs h6{
+    cursor: pointer;
+}
+
+.tab__content{
+    padding: 30px 0px;
+}
+
+.tab__content p{
+    line-height: 30px;
+    color: #212245b6;
+}
+
+.tab__active{
+    color: #df2020;
+}
+
+.form{
+    width: 60%;
+    margin: auto;
+    background-color: #fde4e4;
+    padding: 20px;
+    border-radius: 5px;
+
+}
+
+.form__group{
+    margin-bottom: 30px;
+}
+
+.form__group input, .form__group textarea{
+    width: 100%;
+    background-color: transparent;
+    padding: 7px 20px;
+    border: none;
+    border-bottom: 1px solid #2122454c;
+}
+
+.form__group input:focus,
+.form__group textarea:focus{
+    outline: none;
+} 
+
+.user__name{
+    font-weight: 600;
+    color: #212245;
+}
+
+.user__email{
+    font-size: .8rem;
+}
+
+.feedback__text{
+    color: #212245b6;
+
+}
+.img__item{
+    cursor: pointer;
+}
+
+.related__Product-title{
+    font-size: 1.4rem;
 }
