--- a/src/styles/Hero-section.scss
+++ b/src/styles/Hero-section.scss
@@ -3,7 +3,7 @@
     line-height: 55px;
 }
 .hero__title span{
-    color:#df2020;
+    color:#8a533d;
 }
 
 .hero__content{
@@ -26,7 +26,7 @@
 }
 
 .order__btn{
-    background-color: #df2020;
+    background-color: #8a533d;
     color: white;
     transition: 0.3s;
 }
@@ -37,11 +37,11 @@
 
 .all_foods-btn{
     background: transparent;
-    border: 1px solid #df2020 !important;
+    border: 1px solid #8a533d !important;
 }
 
 .all_foods-btn a{
-    color: #df2020;
+    color: #8a533d;
 }
 
 .hero__service p{
@@ -52,7 +52,7 @@
 
 .shipping__icon i{
     padding: 5px;
-    background-color:#df2020;
+    background-color:#754c31;
     color: #fff;
     border-radius: 50%;
     font-weight: 500 !important;
