--- a/src/styles/cart-item.scss
+++ b/src/styles/cart-item.scss
@@ -15,7 +15,7 @@
 .cart__product-price span{
     font-size: .9rem;
     font-weight: 600;
-    color: #df2020;
+    color: #8a533d;
 }
 
 .increase__decrease-btn{
