--- a/src/styles/checkout.scss
+++ b/src/styles/checkout.scss
@@ -1,6 +1,7 @@
 .checkout__bill {
-    background: #fde4e4;
+    background: #7e7e7e;
     padding: 30px;
+    color: white;
   }
   
   .checkout__total {
