--- a/src/styles/product-details.scss
+++ b/src/styles/product-details.scss
@@ -15,7 +15,7 @@
 
 .addTOCart__btn{
     padding: 3px 15px;
-    background-color: #df2020;
+    background-color: #000000;
     color: #fff;
     border: none;
     border-radius: 3px;
