--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -5,13 +5,12 @@
 }
 
 .logo{
-    text-align: center;
+    text-align: start;
 }
 
 .logo img{
-    width: calc(100% - 60%);
+    width: calc(100% - 40%);
     object-fit: contain;
-    margin-top: -40px;
 }
 
 .logo h5{
@@ -30,11 +29,11 @@
 }
 
 .menu a:hover{
-    color: #df2020;
+    color: #805300;
 }
 
 .active__menu{
-    color: #df2020 !important;
+    color: #000000 !important;
 }
 
 .cart__icon i, .user i, .mobile__menu i{
@@ -51,7 +50,7 @@
     position: absolute;
     top: 30px;
     right: -10px;
-    background-color: #df2020;
+    background-color: #000000;
     color: #fff;
     width: 15px;
     height: 15px;
@@ -74,7 +73,7 @@
     left: 0;
     background-color: #fff;
     z-index: 99999;
-    box-shadow: 5px 5px 15px -5px #fde4e4;
+    box-shadow: 5px 5px 15px -5px #9b9b9b;
 }
 
 .user__loged{
@@ -86,7 +85,7 @@
 @media only screen and (max-width:992px){
 
     .logo img{
-        width: calc(100% - 70%);
+        width: calc(100% - 50%);
     }
 
     .logo h5{
@@ -141,13 +140,6 @@
         width: 100%;
         height: 80px;
         line-height: 80px;
-    }
-
-    .logo img{
-        margin-top: -70px !important;
-    }
-    .logo h5{
-        margin-top: -55px;
     }
 }
 
