--- a/src/styles/pagination.scss
+++ b/src/styles/pagination.scss
@@ -11,7 +11,7 @@
 
 .paginationBttns a{
     padding: 4px 20px;
-    background-color: #df2020;
+    background-color: #000000;
     color: #fff !important;
     border-radius: 5px;
     display: flex;
