--- a/src/styles/product-card.scss
+++ b/src/styles/product-card.scss
@@ -1,17 +1,22 @@
 .product__item{
     border: 1px solid #fde4e4;
     text-align: center;
-    padding: 30px;
+    padding: 5px;
     cursor: pointer;
 }
 
 .product__img{
+
     margin-bottom: 20px;
     transition: 0.4s;
 }
 
+.product__img img{
+    width: 100% !important;
+}
+
 .product__img:hover{
-    transform: scale(1.3);
+    filter: grayscale(0.8);
 }
 
 .product__content h5 a{
@@ -26,7 +31,7 @@
 .product__price{
     font-weight: 600;
     font-size: 1.2rem;
-    color: #df2020;
+    color: #000000;
     
 }
 
@@ -34,7 +39,7 @@
     border: none;
     outline: none;
     padding: 7px 10px;
-    background-color: #df2020;
+    background-color: #000000;
     color: #fff;
     border-radius: 5px;
     font-size: 0.9rem;
