--- a/src/styles/register.scss
+++ b/src/styles/register.scss
@@ -1,3 +1,60 @@
 .form__error{
     color: red;
 }
+
+.login__page{
+    display: flex;
+}
+
+.login__page-left{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: calc(100vh - 100px);
+
+}
+
+.formulario{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    .form__group{
+        width: 100%;
+    }
+    button{
+        background-color: #df2020;
+        padding: 10px  60px;
+        border-radius: 20px;
+        color: white;
+        border: 1px solid #df2020;
+        margin-bottom: 10px;
+        transition: 0.3s;
+    }
+
+    button:hover{
+        background-color: #b11c1c;
+    }
+}
+
+.login__page-rightt{
+    width: 50%;
+    background-image: url("https://images.pexels.com/photos/1108117/pexels-photo-1108117.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+
+}
+
+@media only screen and (max-width:926px){
+    .login__page-left{
+        width: 100%;
+    }
+    .login__page-right{
+        display: none;
+    }
+}
