--- a/src/styles/shopping-cart.scss
+++ b/src/styles/shopping-cart.scss
@@ -1,3 +1,8 @@
+.increase__decrease-btn{
+    background-color: rgb(0, 0, 0);
+    color: white;
+}
+
 .cart__container{
     position: fixed;
     top: 0;
@@ -47,7 +52,7 @@
     padding: 5px 20px;
     width: 100%;
     height: 80px;
-    background-color: #df2020;
+    background-color: #000000;
 }
 
 .cart__bottom h6{
