--- a/src/styles/register.scss
+++ b/src/styles/register.scss
@@ -42,7 +42,7 @@
 
 .login__page-rightt{
     width: 50%;
-    background-image: url("https://images.pexels.com/photos/2233730/pexels-photo-2233730.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+    background-image: url("../assets/images/rightregister.webp");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -54,7 +54,7 @@
     .login__page-left{
         width: 100%;
     }
-    .login__page-right{
+    .login__page-rightt{
         display: none;
     }
 }
