--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -1,3 +1,12 @@
+@font-face {
+    font-family:BebasNeue-Regular, Bebas Neue;
+    src: url(../assets/font/BebasNeue-Regular.ttf);
+}
+@font-face {
+    font-family:Bebas Neue;
+    src: url(../assets/font/BebasNeue-Regular.ttf);
+}
+
 .footer{
     padding-top: 50px;
     padding-bottom: 30px;
