--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,16 +1,27 @@
+
+
 .header {
     width: 100%;
-    height: 100px;
     line-height: 100px;
 
 }
 
 .logo{
     text-align: start;
+    align-items: center;
+    justify-content: center;
+    font-family: BebasNeue-Regular;
+
+    a{  
+        display: flex;
+        align-items: center;
+        width: 5px;
+        height: 100%;
+    }
 }
 
 .logo img{
-    width: calc(100% - 40%);
+    width:230px;
     object-fit: contain;
 }
 
@@ -86,7 +97,7 @@
 @media only screen and (max-width:992px){
 
     .logo img{
-        width: calc(100% - 50%);
+        width: 140px;
     }
 
     .logo h5{
@@ -145,6 +156,9 @@
 }
 
 @media only screen and (max-width:470px){
+    .logo img{
+        width: 140px;
+    }
     .user__loged{
         display: none;
     }
