--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -8,7 +8,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: calc(100vh - 100px);
+    height: calc(100vh - 84px);
 
 }
 
@@ -38,7 +38,7 @@
 
 .login__page-right{
     width: 50%;
-    background-image: url("https://images.pexels.com/photos/3535383/pexels-photo-3535383.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+    background-image: url("../assets/images/rightlogin.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
